repo_DATA = retrace-server.repo
repodir = ${sysconfdir}/yum.repos.d

retraceconf_DATA = retrace-server.conf
retraceconfdir = ${sysconfdir}

httpdconf_DATA = retrace-server-httpd.conf
httpdconfdir = ${sysconfdir}/httpd/conf.d

logrotate_DATA = retrace-server
logrotatedir = ${sysconfdir}/logrotate.d

EXTRA_DIST = retrace-server.conf retrace-server-httpd.conf retrace-server.repo retrace-server
