retracehooks_DATA = debuginfo.conf \
                    fail.conf \
                    mock.conf \
                    retrace.conf \
                    start.conf \
                    success.conf \
                    task.conf

retracehooksdir = ${sysconfdir}/retrace-server/hooks

EXTRA_DIST = $(retracehooks_DATA)
